dataset1235/2025-2/1955397009/users/3218273088/executions/3239899347_1435819351.log
== RUN (2025-08-28 13:06:24)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))
total=(q/5*p)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade3837.62
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade6255.74
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade22676.6
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade4023.34
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade32177.34
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade12696.32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:57:04)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))

total=((p*1/1000)-(q*1/1000))*5
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade5.08
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade7.03
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade13.84
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade4.9
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade39.9
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade14.45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:55:46)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))

total=((p*1000)-(q*1000))/5
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade203170.0
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade281138.0
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade553504.0
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade196044.66
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade1596044.66
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade578040.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 13:04:22)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))

  total=(q/5*p)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
File "XXXX", line 4
    total=(q/5*p)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
File "XXXX", line 4
    total=(q/5*p)
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
File "XXXX", line 4
    total=(q/5*p)
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
File "XXXX", line 4
    total=(q/5*p)
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
File "XXXX", line 4
    total=(q/5*p)
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
File "XXXX", line 4
    total=(q/5*p)
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:44:29)
-- CODE: 
p=float(input(digite peso))
q=float(input(digite quantidade))
total=(p*q)/5
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
File "XXXX", line 1
    p=float(input(digite peso))
                  ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
File "XXXX", line 1
    p=float(input(digite peso))
                  ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
File "XXXX", line 1
    p=float(input(digite peso))
                  ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
File "XXXX", line 1
    p=float(input(digite peso))
                  ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
File "XXXX", line 1
    p=float(input(digite peso))
                  ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
File "XXXX", line 1
    p=float(input(digite peso))
                  ^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 13:03:14)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))

total=(p/5*q)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade3837.62
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade6255.74
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade22676.6
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade4023.34
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade32177.34
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade12696.32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 13:03:43)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))

total=(p*1000/5*q)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade3837624.0
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade6255743.2
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade22676600.4
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade4023340.53
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade32177340.53
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade12696320.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:49:04)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))
total=(p*q)/5
print(round(total,2),grama)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),grama)
                         ^^^^^
NameError: name 'grama' is not defined
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),grama)
                         ^^^^^
NameError: name 'grama' is not defined
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),grama)
                         ^^^^^
NameError: name 'grama' is not defined
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),grama)
                         ^^^^^
NameError: name 'grama' is not defined
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),grama)
                         ^^^^^
NameError: name 'grama' is not defined
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),grama)
                         ^^^^^
NameError: name 'grama' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:52:52)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))

total=(p*q)/5-(p*q/5)
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade0.0
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade0.0
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade0.0
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade0.0
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade0.0
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:47:25)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))
total=(p*q)/5
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade3837.62
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade6255.74
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade22676.6
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade4023.34
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade32177.34
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade12696.32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:49:22)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))
total=(p*q)/5
print(round(total,2),g)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 12:45:40)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))
total=(p*q)/5
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade3837.62
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade6255.74
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade22676.6
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade4023.34
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade32177.34
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade12696.32
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:49:25)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))
total=(p*q)/5
print(round(total,2),g)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(total,2),g)
                         ^
NameError: name 'g' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:55:48)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))

total=((p*1000)-(q*1000))/5
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade203170.0
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade281138.0
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade553504.0
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade196044.66
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade1596044.66
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade578040.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:45:11)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))
total=(p*q)/5
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade3837.62
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade6255.74
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade22676.6
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade4023.34
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade32177.34
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade12696.32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 12:56:34)
-- CODE: 
p=float(input("digite peso"))
q=float(input("digite quantidade"))

total=((p*1/1000)-(q*1/1000))/5
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1034.4
18.55
---- correct output:
941.65
---- user output:
digite pesodigite quantidade0.2
-- TEST CASE 2:
---- input:
1427.6
21.91
---- correct output:
1318.05
---- user output:
digite pesodigite quantidade0.28
-- TEST CASE 3:
---- input:
2807.90
40.38
---- correct output:
2606.0
---- user output:
digite pesodigite quantidade0.55
-- TEST CASE 4:
---- input:
1000.3333
20.11
---- correct output:
899.78
---- user output:
digite pesodigite quantidade0.2
-- TEST CASE 5:
---- input:
8000.3333
20.11
---- correct output:
7899.78
---- user output:
digite pesodigite quantidade1.6
-- TEST CASE 6:
---- input:
2912
21.80
---- correct output:
2803.0
---- user output:
digite pesodigite quantidade0.58
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
